defer added to all script tag with src=

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
-    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -35,14 +35,11 @@
     
 
    
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="/javascripts/script.js"> </script>
+    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script defer src="/javascripts/script.js"> </script>
 
-    {{!-- <script src="sweetalert2.min.js"></script> --}}
-    {{!-- <link rel="stylesheet" href="sweetalert2.min.css"> --}}
-
-    <script src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script defer src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 
     {{/if}}
@@ -108,31 +105,11 @@
     <link href="/adminhome/assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="/adminhome/assets/css/style.css" rel="stylesheet" type="text/css">
 
-    {{!-- datatable links start --}}
-    {{!--
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css"> --}}
-    {{!--datatable links end--}}
 
-    {{!-- datatable scripts --}}
-    {{!--
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.3/js/dataTables.buttons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.html5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
-    <script src="https://cdn.datatables.net/buttons/2.2.3/js/buttons.print.min.js"></script> --}}
-    {{!-- datatable scripts end --}}
-
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
         integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    {{!--
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"> --}}
+
     {{/if}}
 
 
@@ -163,31 +140,28 @@
 
     <!-- All JS is here
 ============================================ --> 
-    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script src="/assets/js/vendor/popper.min.js"></script>
-    <script src="/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="/assets/js/plugins/slick.js"></script>
-    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script src="/assets/js/plugins/wow.js"></script>
-    <script src="/assets/js/plugins/jquery-ui.js"></script>
-    <script src="/assets/js/plugins/magnific-popup.js"></script>
-    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
-    <script src="/assets/js/plugins/easyzoom.js"></script>
-    <script src="/assets/js/plugins/scrollup.js"></script>
-    {{!--
-    <script src="/assets/js/plugins/ajax-mail.js"></script> --}}
-    {{!--
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> --}}
+    <script defer src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script defer src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script defer src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script defer src="/assets/js/vendor/popper.min.js"></script>
+    <script defer src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script defer src="/assets/js/plugins/slick.js"></script>
+    <script defer src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script defer src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script defer src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script defer src="/assets/js/plugins/wow.js"></script>
+    <script defer src="/assets/js/plugins/jquery-ui.js"></script>
+    <script defer src="/assets/js/plugins/magnific-popup.js"></script>
+    <script defer src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script defer src="/assets/js/plugins/easyzoom.js"></script>
+    <script defer src="/assets/js/plugins/scrollup.js"></script>
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Main JS -->
-    <script src="/assets/js/main.js"></script>
+    <script defer src="/assets/js/main.js"></script>
 
     {{/if}}
 
@@ -197,51 +171,51 @@
     <!-- All JS is here
 ============================================ -->
 
-    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script src="/assets/js/vendor/popper.min.js"></script>
-    <script src="/assets/js/vendor/bootstrap.min.js"></script>
-    <script src="/assets/js/plugins/slick.js"></script>
-    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script src="/assets/js/plugins/wow.js"></script>
-    <script src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script src="/assets/js/plugins/jquery-ui.js"></script>
-    <script src="/assets/js/plugins/magnific-popup.js"></script>
-    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
-    <script src="/assets/js/plugins/easyzoom.js"></script>
-    <script src="/assets/js/plugins/scrollup.js"></script>
-    <script src="/assets/js/plugins/ajax-mail.js"></script>
+    <script defer src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script defer src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script defer src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script defer src="/assets/js/vendor/popper.min.js"></script>
+    <script defer src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script defer src="/assets/js/plugins/slick.js"></script>
+    <script defer src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script defer src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script defer src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script defer src="/assets/js/plugins/wow.js"></script>
+    <script defer src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script defer src="/assets/js/plugins/jquery-ui.js"></script>
+    <script defer src="/assets/js/plugins/magnific-popup.js"></script>
+    <script defer src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script defer src="/assets/js/plugins/easyzoom.js"></script>
+    <script defer src="/assets/js/plugins/scrollup.js"></script>
+    <script defer src="/assets/js/plugins/ajax-mail.js"></script>
     <!-- Main JS -->
-    <script src="/assets/js/main.js"></script>
+    <script defer src="/assets/js/main.js"></script>
 
     {{/if}}
 
     {{#if admin}}
 
     <!-- jQuery  -->
-    <script src="/adminlogin/assets/js/jquery.min.js"></script>
-    <script src="/adminlogin/assets/js/popper.min.js"></script>
-    <script src="/adminlogin/assets/js/bootstrap.min.js"></script>
-    <script src="/adminlogin/assets/js/modernizr.min.js"></script>
-    <script src="/adminlogin/assets/js/detect.js"></script>
-    <script src="/adminlogin/assets/js/fastclick.js"></script>
-    <script src="/adminlogin/assets/js/jquery.slimscroll.js"></script>
-    <script src="/adminlogin/assets/js/jquery.blockUI.js"></script>
-    <script src="/adminlogin/assets/js/waves.js"></script>
-    <script src="/adminlogin/assets/js/jquery.nicescroll.js"></script>
-    <script src="/adminlogin/assets/js/jquery.scrollTo.min.js"></script>
+    <script defer src="/adminlogin/assets/js/jquery.min.js"></script>
+    <script defer src="/adminlogin/assets/js/popper.min.js"></script>
+    <script defer src="/adminlogin/assets/js/bootstrap.min.js"></script>
+    <script defer src="/adminlogin/assets/js/modernizr.min.js"></script>
+    <script defer src="/adminlogin/assets/js/detect.js"></script>
+    <script defer src="/adminlogin/assets/js/fastclick.js"></script>
+    <script defer src="/adminlogin/assets/js/jquery.slimscroll.js"></script>
+    <script defer src="/adminlogin/assets/js/jquery.blockUI.js"></script>
+    <script defer src="/adminlogin/assets/js/waves.js"></script>
+    <script defer src="/adminlogin/assets/js/jquery.nicescroll.js"></script>
+    <script defer src="/adminlogin/assets/js/jquery.scrollTo.min.js"></script>
 
-    <script src="/adminlogin/assets/plugins/skycons/skycons.min.js"></script>
-    <script src="/adminlogin/assets/plugins/raphael/raphael-min.js"></script>
-    <script src="/adminlogin/assets/plugins/morris/morris.min.js"></script>
+    <script defer src="/adminlogin/assets/plugins/skycons/skycons.min.js"></script>
+    <script defer src="/adminlogin/assets/plugins/raphael/raphael-min.js"></script>
+    <script defer src="/adminlogin/assets/plugins/morris/morris.min.js"></script>
 
-    <script src="/adminlogin/assets/pages/dashborad.js"></script>
+    <script defer src="/adminlogin/assets/pages/dashborad.js"></script>
 
     <!-- App js -->
-    <script src="/adminlogin/assets/js/app.js"></script>
+    <script defer src="/adminlogin/assets/js/app.js"></script>
     <script>
         /* BEGIN SVG WEATHER ICON */
         if (typeof Skycons !== 'undefined') {
@@ -275,46 +249,46 @@
     {{#if adminhome}}
 
     <!-- jQuery  -->
-    <script src="/adminhome/assets/js/jquery.min.js"></script>
-    <script src="/adminhome/assets/js/popper.min.js"></script>
-    <script src="/adminhome/assets/js/bootstrap.min.js"></script>
-    <script src="/adminhome/assets/js/modernizr.min.js"></script>
-    <script src="/adminhome/assets/js/detect.js"></script>
-    <script src="/adminhome/assets/js/fastclick.js"></script>
-    <script src="/adminhome/assets/js/jquery.slimscroll.js"></script>
-    <script src="/adminhome/assets/js/jquery.blockUI.js"></script>
-    <script src="/adminhome/assets/js/waves.js"></script>
-    <script src="/adminhome/assets/js/jquery.nicescroll.js"></script>
-    <script src="/adminhome/assets/js/jquery.scrollTo.min.js"></script>
+    <script defer src="/adminhome/assets/js/jquery.min.js"></script>
+    <script defer src="/adminhome/assets/js/popper.min.js"></script>
+    <script defer src="/adminhome/assets/js/bootstrap.min.js"></script>
+    <script defer src="/adminhome/assets/js/modernizr.min.js"></script>
+    <script defer src="/adminhome/assets/js/detect.js"></script>
+    <script defer src="/adminhome/assets/js/fastclick.js"></script>
+    <script defer src="/adminhome/assets/js/jquery.slimscroll.js"></script>
+    <script defer src="/adminhome/assets/js/jquery.blockUI.js"></script>
+    <script defer src="/adminhome/assets/js/waves.js"></script>
+    <script defer src="/adminhome/assets/js/jquery.nicescroll.js"></script>
+    <script defer src="/adminhome/assets/js/jquery.scrollTo.min.js"></script>
     <!-- Required datatable js -->
-    <script src="/adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
 
-    <script src="/adminhome/assets/plugins/skycons/skycons.min.js"></script>
-    <script src="/adminhome/assets/plugins/raphael/raphael-min.js"></script>
-    <script src="/adminhome/assets/plugins/morris/morris.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/skycons/skycons.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/raphael/raphael-min.js"></script>
+    <script defer src="/adminhome/assets/plugins/morris/morris.min.js"></script>
     <!-- Buttons examples -->
-    <script src="/adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/jszip.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/jszip.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
 
-    <script src="/adminhome/assets/pages/dashborad.js"></script>
+    <script defer src="/adminhome/assets/pages/dashborad.js"></script>
     <!-- Responsive examples -->
-    <script src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
-    <script src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
+    <script defer src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Datatable init js -->
-    <script src="/adminhome/assets/pages/datatables.init.js"></script>
+    <script defer src="/adminhome/assets/pages/datatables.init.js"></script>
 
-    <script src="/adminhome/assets/js/app.js"></script>
+    <script defer src="/adminhome/assets/js/app.js"></script>
     <!-- App js -->
     {{!-- <script type="text/javascript">
         $(document).ready(function () {
@@ -355,7 +329,7 @@
     {{/if}}
 
     {{#if error}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
 
     <script>
         gsap.set("svg", { visibility: "visible" });
