defer removed . removed

--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
-    <script defer src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
         integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -140,26 +140,26 @@
 
     <!-- All JS is here
 ============================================ --> 
-    <script defer src="./assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script defer src="./assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script defer src="./assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script defer src="./assets/js/vendor/popper.min.js"></script>
-    <script defer src="./assets/js/vendor/bootstrap.min.js"></script>
-    <script defer src="./assets/js/plugins/slick.js"></script>
-    <script defer src="./assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script defer src="./assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script defer src="./assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script defer src="./assets/js/plugins/wow.js"></script>
-    <script defer src="./assets/js/plugins/jquery-ui.js"></script>
-    <script defer src="./assets/js/plugins/magnific-popup.js"></script>
-    <script defer src="./assets/js/plugins/sticky-sidebar.js"></script>
-    <script defer src="./assets/js/plugins/easyzoom.js"></script>
-    <script defer src="./assets/js/plugins/scrollup.js"></script>
+    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script src="/assets/js/vendor/popper.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script src="/assets/js/plugins/slick.js"></script>
+    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script src="/assets/js/plugins/wow.js"></script>
+    <script src="/assets/js/plugins/jquery-ui.js"></script>
+    <script src="/assets/js/plugins/magnific-popup.js"></script>
+    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script src="/assets/js/plugins/easyzoom.js"></script>
+    <script src="/assets/js/plugins/scrollup.js"></script>
 
 
     <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main JS -->
-    <script defer src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     {{/if}}
 
@@ -169,51 +169,51 @@
     <!-- All JS is here
 ============================================ -->
 
-    <script defer src="./assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script defer src="./assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script defer src="./assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script defer src="./assets/js/vendor/popper.min.js"></script>
-    <script defer src="./assets/js/vendor/bootstrap.min.js"></script>
-    <script defer src="./assets/js/plugins/slick.js"></script>
-    <script defer src="./assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script defer src="./assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script defer src="./assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script defer src="./assets/js/plugins/wow.js"></script>
-    <script defer src="./assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script defer src="./assets/js/plugins/jquery-ui.js"></script>
-    <script defer src="./assets/js/plugins/magnific-popup.js"></script>
-    <script defer src="./assets/js/plugins/sticky-sidebar.js"></script>
-    <script defer src="./assets/js/plugins/easyzoom.js"></script>
-    <script defer src="./assets/js/plugins/scrollup.js"></script>
-    <script defer src="./assets/js/plugins/ajax-mail.js"></script>
+    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script src="/assets/js/vendor/popper.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script src="/assets/js/plugins/slick.js"></script>
+    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script src="/assets/js/plugins/wow.js"></script>
+    <script src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script src="/assets/js/plugins/jquery-ui.js"></script>
+    <script src="/assets/js/plugins/magnific-popup.js"></script>
+    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script src="/assets/js/plugins/easyzoom.js"></script>
+    <script src="/assets/js/plugins/scrollup.js"></script>
+    <script src="/assets/js/plugins/ajax-mail.js"></script>
     <!-- Main JS -->
-    <script defer src="./assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     {{/if}}
 
     {{#if admin}}
 
     <!-- jQuery  -->
-    <script defer src="./adminlogin/assets/js/jquery.min.js"></script>
-    <script defer src="./adminlogin/assets/js/popper.min.js"></script>
-    <script defer src="./adminlogin/assets/js/bootstrap.min.js"></script>
-    <script defer src="./adminlogin/assets/js/modernizr.min.js"></script>
-    <script defer src="./adminlogin/assets/js/detect.js"></script>
-    <script defer src="./adminlogin/assets/js/fastclick.js"></script>
-    <script defer src="./adminlogin/assets/js/jquery.slimscroll.js"></script>
-    <script defer src="./adminlogin/assets/js/jquery.blockUI.js"></script>
-    <script defer src="./adminlogin/assets/js/waves.js"></script>
-    <script defer src="./adminlogin/assets/js/jquery.nicescroll.js"></script>
-    <script defer src="./adminlogin/assets/js/jquery.scrollTo.min.js"></script>
+    <script src="/adminlogin/assets/js/jquery.min.js"></script>
+    <script src="/adminlogin/assets/js/popper.min.js"></script>
+    <script src="/adminlogin/assets/js/bootstrap.min.js"></script>
+    <script src="/adminlogin/assets/js/modernizr.min.js"></script>
+    <script src="/adminlogin/assets/js/detect.js"></script>
+    <script src="/adminlogin/assets/js/fastclick.js"></script>
+    <script src="/adminlogin/assets/js/jquery.slimscroll.js"></script>
+    <script src="/adminlogin/assets/js/jquery.blockUI.js"></script>
+    <script src="/adminlogin/assets/js/waves.js"></script>
+    <script src="/adminlogin/assets/js/jquery.nicescroll.js"></script>
+    <script src="/adminlogin/assets/js/jquery.scrollTo.min.js"></script>
 
-    <script defer src="./adminlogin/assets/plugins/skycons/skycons.min.js"></script>
-    <script defer src="./adminlogin/assets/plugins/raphael/raphael-min.js"></script>
-    <script defer src="./adminlogin/assets/plugins/morris/morris.min.js"></script>
+    <script src="/adminlogin/assets/plugins/skycons/skycons.min.js"></script>
+    <script src="/adminlogin/assets/plugins/raphael/raphael-min.js"></script>
+    <script src="/adminlogin/assets/plugins/morris/morris.min.js"></script>
 
-    <script defer src="./adminlogin/assets/pages/dashborad.js"></script>
+    <script src="/adminlogin/assets/pages/dashborad.js"></script>
 
     <!-- App js -->
-    <script defer src="./adminlogin/assets/js/app.js"></script>
+    <script src="/adminlogin/assets/js/app.js"></script>
     <script>
         /* BEGIN SVG WEATHER ICON */
         if (typeof Skycons !== 'undefined') {
@@ -247,46 +247,46 @@
     {{#if adminhome}}
 
     <!-- jQuery  -->
-    <script defer src="./adminhome/assets/js/jquery.min.js"></script>
-    <script defer src="./adminhome/assets/js/popper.min.js"></script>
-    <script defer src="./adminhome/assets/js/bootstrap.min.js"></script>
-    <script defer src="./adminhome/assets/js/modernizr.min.js"></script>
-    <script defer src="./adminhome/assets/js/detect.js"></script>
-    <script defer src="./adminhome/assets/js/fastclick.js"></script>
-    <script defer src="./adminhome/assets/js/jquery.slimscroll.js"></script>
-    <script defer src="./adminhome/assets/js/jquery.blockUI.js"></script>
-    <script defer src="./adminhome/assets/js/waves.js"></script>
-    <script defer src="./adminhome/assets/js/jquery.nicescroll.js"></script>
-    <script defer src="./adminhome/assets/js/jquery.scrollTo.min.js"></script>
+    <script src="/adminhome/assets/js/jquery.min.js"></script>
+    <script src="/adminhome/assets/js/popper.min.js"></script>
+    <script src="/adminhome/assets/js/bootstrap.min.js"></script>
+    <script src="/adminhome/assets/js/modernizr.min.js"></script>
+    <script src="/adminhome/assets/js/detect.js"></script>
+    <script src="/adminhome/assets/js/fastclick.js"></script>
+    <script src="/adminhome/assets/js/jquery.slimscroll.js"></script>
+    <script src="/adminhome/assets/js/jquery.blockUI.js"></script>
+    <script src="/adminhome/assets/js/waves.js"></script>
+    <script src="/adminhome/assets/js/jquery.nicescroll.js"></script>
+    <script src="/adminhome/assets/js/jquery.scrollTo.min.js"></script>
     <!-- Required datatable js -->
-    <script defer src="./adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
 
-    <script defer src="./adminhome/assets/plugins/skycons/skycons.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/raphael/raphael-min.js"></script>
-    <script defer src="./adminhome/assets/plugins/morris/morris.min.js"></script>
+    <script src="/adminhome/assets/plugins/skycons/skycons.min.js"></script>
+    <script src="/adminhome/assets/plugins/raphael/raphael-min.js"></script>
+    <script src="/adminhome/assets/plugins/morris/morris.min.js"></script>
     <!-- Buttons examples -->
-    <script defer src="./adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/jszip.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/jszip.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
 
-    <script defer src="./adminhome/assets/pages/dashborad.js"></script>
+    <script src="/adminhome/assets/pages/dashborad.js"></script>
     <!-- Responsive examples -->
-    <script defer src="./adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
-    <script defer src="./adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 
     <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Datatable init js -->
-    <script defer src="./adminhome/assets/pages/datatables.init.js"></script>
+    <script src="/adminhome/assets/pages/datatables.init.js"></script>
 
-    <script defer src="./adminhome/assets/js/app.js"></script>
+    <script src="/adminhome/assets/js/app.js"></script>
     <!-- App js -->
     {{!-- <script type="text/javascript">
         $(document).ready(function () {
