--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -35,11 +35,11 @@
     
 
    
-    <script defer src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script defer src="/javascripts/script.js"> </script>
+    <script  src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script  src="/javascripts/script.js"> </script>
 
-    <script defer src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script  src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 
     {{/if}}
@@ -106,7 +106,7 @@
     <link href="/adminhome/assets/css/style.css" rel="stylesheet" type="text/css">
 
 
-    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
         integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -157,7 +157,7 @@
     <script src="/assets/js/plugins/scrollup.js"></script>
 
 
-    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main JS -->
     <script src="/assets/js/main.js"></script>
 
@@ -280,7 +280,7 @@
     <script src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
     <script src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 
-    <script defer src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Datatable init js -->
