--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -17,20 +17,20 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- All CSS is here
 	============================================ -->
-    <link rel="stylesheet" href="stylesheets/style.css">
-    <link rel="stylesheet" href="assets/css/vendor/signericafat.css">
-    <link rel="stylesheet" href="assets/css/plugins/jquery-ui.css">
-    <link rel="stylesheet" href="assets/css/vendor/cerebrisans.css">
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/simple-line-icons.css">
-    <link rel="stylesheet" href="assets/css/vendor/elegant.css">
-    <link rel="stylesheet" href="assets/css/vendor/linear-icon.css">
-    <link rel="stylesheet" href="assets/css/plugins/nice-select.css">
-    <link rel="stylesheet" href="assets/css/plugins/easyzoom.css">
-    <link rel="stylesheet" href="assets/css/plugins/slick.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/assets/css/vendor/signericafat.css">
+    <link rel="stylesheet" href="/assets/css/plugins/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/css/vendor/cerebrisans.css">
+    <link rel="stylesheet" href="/assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/vendor/simple-line-icons.css">
+    <link rel="stylesheet" href="/assets/css/vendor/elegant.css">
+    <link rel="stylesheet" href="/assets/css/vendor/linear-icon.css">
+    <link rel="stylesheet" href="/assets/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="/assets/css/plugins/easyzoom.css">
+    <link rel="stylesheet" href="/assets/css/plugins/slick.css">
+    <link rel="stylesheet" href="/assets/css/plugins/animate.css">
+    <link rel="stylesheet" href="/assets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     
 
@@ -38,7 +38,7 @@
     <script  src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script  src="javascripts/script.js"> </script>
 
-    <script  src="assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script  src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
     <script  src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     
@@ -50,26 +50,26 @@
 
     <!-- All JS is here
 ============================================ --> 
-    <script src="assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script src="assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/plugins/slick.js"></script>
-    <script src="assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script src="assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script src="assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script src="assets/js/plugins/wow.js"></script>
-    <script src="assets/js/plugins/jquery-ui.js"></script>
-    <script src="assets/js/plugins/magnific-popup.js"></script>
-    <script src="assets/js/plugins/sticky-sidebar.js"></script>
-    <script src="assets/js/plugins/easyzoom.js"></script>
-    <script src="assets/js/plugins/scrollup.js"></script>
+    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script src="/assets/js/vendor/popper.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script src="/assets/js/plugins/slick.js"></script>
+    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script src="/assets/js/plugins/wow.js"></script>
+    <script src="/assets/js/plugins/jquery-ui.js"></script>
+    <script src="/assets/js/plugins/magnific-popup.js"></script>
+    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script src="/assets/js/plugins/easyzoom.js"></script>
+    <script src="/assets/js/plugins/scrollup.js"></script>
 
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- Main JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     {{/if}}
 
@@ -84,19 +84,19 @@
 
     <!-- All CSS is here
 	============================================ -->
-    <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/vendor/signericafat.css">
-    <link rel="stylesheet" href="assets/css/vendor/cerebrisans.css">
-    <link rel="stylesheet" href="assets/css/vendor/simple-line-icons.css">
-    <link rel="stylesheet" href="assets/css/vendor/elegant.css">
-    <link rel="stylesheet" href="assets/css/vendor/linear-icon.css">
-    <link rel="stylesheet" href="assets/css/plugins/nice-select.css">
-    <link rel="stylesheet" href="assets/css/plugins/easyzoom.css">
-    <link rel="stylesheet" href="assets/css/plugins/slick.css">
-    <link rel="stylesheet" href="assets/css/plugins/animate.css">
-    <link rel="stylesheet" href="assets/css/plugins/magnific-popup.css">
-    <link rel="stylesheet" href="assets/css/plugins/jquery-ui.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/vendor/signericafat.css">
+    <link rel="stylesheet" href="/assets/css/vendor/cerebrisans.css">
+    <link rel="stylesheet" href="/assets/css/vendor/simple-line-icons.css">
+    <link rel="stylesheet" href="/assets/css/vendor/elegant.css">
+    <link rel="stylesheet" href="/assets/css/vendor/linear-icon.css">
+    <link rel="stylesheet" href="/assets/css/plugins/nice-select.css">
+    <link rel="stylesheet" href="/assets/css/plugins/easyzoom.css">
+    <link rel="stylesheet" href="/assets/css/plugins/slick.css">
+    <link rel="stylesheet" href="/assets/css/plugins/animate.css">
+    <link rel="stylesheet" href="/assets/css/plugins/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/plugins/jquery-ui.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     {{/if}}
 
     {{#if admin}}
@@ -108,13 +108,13 @@
     <meta content="Mannatthemes" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="shortcut icon" href="adminlogin/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/adminlogin/assets/images/favicon.ico">
 
-    <link href="adminlogin/assets/plugins/morris/morris.css" rel="stylesheet">
+    <link href="/adminlogin/assets/plugins/morris/morris.css" rel="stylesheet">
 
-    <link href="adminlogin/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="adminlogin/assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="adminlogin/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/adminlogin/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/adminlogin/assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="/adminlogin/assets/css/style.css" rel="stylesheet" type="text/css">
     {{/if}}
 
     {{#if adminhome}}
@@ -126,13 +126,13 @@
     <meta content="Mannatthemes" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <link rel="shortcut icon" href="adminhome/assets/images/favicon.ico">
+    <link rel="shortcut icon" href="/adminhome/assets/images/favicon.ico">
 
-    <link href="adminhome/assets/plugins/morris/morris.css" rel="stylesheet">
+    <link href="/adminhome/assets/plugins/morris/morris.css" rel="stylesheet">
 
-    <link href="adminhome/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="adminhome/assets/css/icons.css" rel="stylesheet" type="text/css">
-    <link href="adminhome/assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="/adminhome/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="/adminhome/assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link href="/adminhome/assets/css/style.css" rel="stylesheet" type="text/css">
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"
@@ -170,51 +170,51 @@
     <!-- All JS is here
 ============================================ -->
 
-    <script src="assets/js/vendor/modernizr-3.11.7.min.js"></script>
-    <script src="assets/js/vendor/jquery-v3.6.0.min.js"></script>
-    <script src="assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
-    <script src="assets/js/vendor/popper.min.js"></script>
-    <script src="assets/js/vendor/bootstrap.min.js"></script>
-    <script src="assets/js/plugins/slick.js"></script>
-    <script src="assets/js/plugins/jquery.syotimer.min.js"></script>
-    <script src="assets/js/plugins/jquery.instagramfeed.min.js"></script>
-    <script src="assets/js/plugins/jquery.nice-select.min.js"></script>
-    <script src="assets/js/plugins/wow.js"></script>
-    <script src="assets/js/plugins/jquery-ui-touch-punch.js"></script>
-    <script src="assets/js/plugins/jquery-ui.js"></script>
-    <script src="assets/js/plugins/magnific-popup.js"></script>
-    <script src="assets/js/plugins/sticky-sidebar.js"></script>
-    <script src="assets/js/plugins/easyzoom.js"></script>
-    <script src="assets/js/plugins/scrollup.js"></script>
-    <script src="assets/js/plugins/ajax-mail.js"></script>
+    <script src="/assets/js/vendor/modernizr-3.11.7.min.js"></script>
+    <script src="/assets/js/vendor/jquery-v3.6.0.min.js"></script>
+    <script src="/assets/js/vendor/jquery-migrate-v3.3.2.min.js"></script>
+    <script src="/assets/js/vendor/popper.min.js"></script>
+    <script src="/assets/js/vendor/bootstrap.min.js"></script>
+    <script src="/assets/js/plugins/slick.js"></script>
+    <script src="/assets/js/plugins/jquery.syotimer.min.js"></script>
+    <script src="/assets/js/plugins/jquery.instagramfeed.min.js"></script>
+    <script src="/assets/js/plugins/jquery.nice-select.min.js"></script>
+    <script src="/assets/js/plugins/wow.js"></script>
+    <script src="/assets/js/plugins/jquery-ui-touch-punch.js"></script>
+    <script src="/assets/js/plugins/jquery-ui.js"></script>
+    <script src="/assets/js/plugins/magnific-popup.js"></script>
+    <script src="/assets/js/plugins/sticky-sidebar.js"></script>
+    <script src="/assets/js/plugins/easyzoom.js"></script>
+    <script src="/assets/js/plugins/scrollup.js"></script>
+    <script src="/assets/js/plugins/ajax-mail.js"></script>
     <!-- Main JS -->
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
     {{/if}}
 
     {{#if admin}}
 
     <!-- jQuery  -->
-    <script src="adminlogin/assets/js/jquery.min.js"></script>
-    <script src="adminlogin/assets/js/popper.min.js"></script>
-    <script src="adminlogin/assets/js/bootstrap.min.js"></script>
-    <script src="adminlogin/assets/js/modernizr.min.js"></script>
-    <script src="adminlogin/assets/js/detect.js"></script>
-    <script src="adminlogin/assets/js/fastclick.js"></script>
-    <script src="adminlogin/assets/js/jquery.slimscroll.js"></script>
-    <script src="adminlogin/assets/js/jquery.blockUI.js"></script>
-    <script src="adminlogin/assets/js/waves.js"></script>
-    <script src="adminlogin/assets/js/jquery.nicescroll.js"></script>
-    <script src="adminlogin/assets/js/jquery.scrollTo.min.js"></script>
+    <script src="/adminlogin/assets/js/jquery.min.js"></script>
+    <script src="/adminlogin/assets/js/popper.min.js"></script>
+    <script src="/adminlogin/assets/js/bootstrap.min.js"></script>
+    <script src="/adminlogin/assets/js/modernizr.min.js"></script>
+    <script src="/adminlogin/assets/js/detect.js"></script>
+    <script src="/adminlogin/assets/js/fastclick.js"></script>
+    <script src="/adminlogin/assets/js/jquery.slimscroll.js"></script>
+    <script src="/adminlogin/assets/js/jquery.blockUI.js"></script>
+    <script src="/adminlogin/assets/js/waves.js"></script>
+    <script src="/adminlogin/assets/js/jquery.nicescroll.js"></script>
+    <script src="/adminlogin/assets/js/jquery.scrollTo.min.js"></script>
 
-    <script src="adminlogin/assets/plugins/skycons/skycons.min.js"></script>
-    <script src="adminlogin/assets/plugins/raphael/raphael-min.js"></script>
-    <script src="adminlogin/assets/plugins/morris/morris.min.js"></script>
+    <script src="/adminlogin/assets/plugins/skycons/skycons.min.js"></script>
+    <script src="/adminlogin/assets/plugins/raphael/raphael-min.js"></script>
+    <script src="/adminlogin/assets/plugins/morris/morris.min.js"></script>
 
-    <script src="adminlogin/assets/pages/dashborad.js"></script>
+    <script src="/adminlogin/assets/pages/dashborad.js"></script>
 
     <!-- App js -->
-    <script src="adminlogin/assets/js/app.js"></script>
+    <script src="/adminlogin/assets/js/app.js"></script>
     <script>
         /* BEGIN SVG WEATHER ICON */
         if (typeof Skycons !== 'undefined') {
@@ -248,46 +248,46 @@
     {{#if adminhome}}
 
     <!-- jQuery  -->
-    <script src="adminhome/assets/js/jquery.min.js"></script>
-    <script src="adminhome/assets/js/popper.min.js"></script>
-    <script src="adminhome/assets/js/bootstrap.min.js"></script>
-    <script src="adminhome/assets/js/modernizr.min.js"></script>
-    <script src="adminhome/assets/js/detect.js"></script>
-    <script src="adminhome/assets/js/fastclick.js"></script>
-    <script src="adminhome/assets/js/jquery.slimscroll.js"></script>
-    <script src="adminhome/assets/js/jquery.blockUI.js"></script>
-    <script src="adminhome/assets/js/waves.js"></script>
-    <script src="adminhome/assets/js/jquery.nicescroll.js"></script>
-    <script src="adminhome/assets/js/jquery.scrollTo.min.js"></script>
+    <script src="/adminhome/assets/js/jquery.min.js"></script>
+    <script src="/adminhome/assets/js/popper.min.js"></script>
+    <script src="/adminhome/assets/js/bootstrap.min.js"></script>
+    <script src="/adminhome/assets/js/modernizr.min.js"></script>
+    <script src="/adminhome/assets/js/detect.js"></script>
+    <script src="/adminhome/assets/js/fastclick.js"></script>
+    <script src="/adminhome/assets/js/jquery.slimscroll.js"></script>
+    <script src="/adminhome/assets/js/jquery.blockUI.js"></script>
+    <script src="/adminhome/assets/js/waves.js"></script>
+    <script src="/adminhome/assets/js/jquery.nicescroll.js"></script>
+    <script src="/adminhome/assets/js/jquery.scrollTo.min.js"></script>
     <!-- Required datatable js -->
-    <script src="adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.bootstrap4.min.js"></script>
 
-    <script src="adminhome/assets/plugins/skycons/skycons.min.js"></script>
-    <script src="adminhome/assets/plugins/raphael/raphael-min.js"></script>
-    <script src="adminhome/assets/plugins/morris/morris.min.js"></script>
+    <script src="/adminhome/assets/plugins/skycons/skycons.min.js"></script>
+    <script src="/adminhome/assets/plugins/raphael/raphael-min.js"></script>
+    <script src="/adminhome/assets/plugins/morris/morris.min.js"></script>
     <!-- Buttons examples -->
-    <script src="adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/jszip.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
-    <script src="adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.buttons.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/jszip.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/pdfmake.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/vfs_fonts.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.html5.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.print.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/buttons.colVis.min.js"></script>
 
-    <script src="adminhome/assets/pages/dashborad.js"></script>
+    <script src="/adminhome/assets/pages/dashborad.js"></script>
     <!-- Responsive examples -->
-    <script src="adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
-    <script src="adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
+    <script src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 
     <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Datatable init js -->
-    <script src="adminhome/assets/pages/datatables.init.js"></script>
+    <script src="/adminhome/assets/pages/datatables.init.js"></script>
 
-    <script src="adminhome/assets/js/app.js"></script>
+    <script src="/adminhome/assets/js/app.js"></script>
     <!-- App js -->
     {{!-- <script type="text/javascript">
         $(document).ready(function () {
