--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -281,7 +281,7 @@
     <script src="/adminhome/assets/plugins/datatables/dataTables.responsive.min.js"></script>
     <script src="/adminhome/assets/plugins/datatables/responsive.bootstrap4.min.js"></script>
 
-    <script src="/cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
     <!-- Datatable init js -->
